Cambio en el color del fondo(body) al color del fondo del prototipo, Cammbios en el index(pendientes cambios en el slider por imagenes.

--- a/core/css/style.css
+++ b/core/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #F9F9F9;
+    background-color: #EFEFEF;
     display: flex;
     min-height: 100vh;
     flex-direction: column;
